tests/src/frontend/typechecking/invalid/superfluous_return4.sk
fun main(): void {
  try {
    return void
  } catch {
  | Exception _ -> void
  }
}
